<resources>
    <string name="app_name">Jajpur Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="website">jajpur.nic.in</string>
    <string name="name">Jajpur</string>
    <string name="category_sights">Tourist places</string>
    <string name="category_food">Festivals</string>
    <string name="category_shops">Public sectors</string>
    <string name="category_info">Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_internet_name">Internet</string>
    <string name="info_internet_description">Jajpur (also known as Jajapur,"ଯାଜପୁର") is a city and a municipality in Jajpur district in the Indian state of Odisha. It is popularly known as Biraja Khetra, which translates as "the place sacred to Goddess Biraja", and is located on the banks of the Baitarani River. It was the capital of Odisha during the Kesari dynasty, later supplanted by Cuttack. Now, it is the headquarters of Jajpur district.</string>
    <string name="info_konbini_name">Jajpur</string>
    <string name="info_konbini_description">Description</string>
    <string name="info_transport_name">How to Reach</string>
    <string name="info_transport_description">Tourist can reach to the spot by availing bus from Cuttack, Bhubaneswar, Kolkota and other small cities of Odisha. Journey can be more comfortable if tourists hire a four wheeler to visit the spot.</string>
    <string name="sight_Biraja_name">Maa Biraja Temple</string>
    <string name="sight_Biraja_description">The Biraja Temple or Girija Kshetra is a historic Hindu temple located in Jajpur (about 125 kilometres (78 mi) north of Bhubaneswar), Odisha, India.</string>
    <string name="sight_Biraja_address">Devidwar, Jajpur, Odisha,755001</string>
    <string name="sight_Biraja_phone">7838742669</string>
    <string name="sight_Biraja_schedule">06:00-18:00. EveryDay</string>
    <string name="sight_Biraja_price">Verasatile..</string>
    <string name="food_festival_name">Maha Bisuva Sankaranti</string>
    <string name="shop_potato_name">Collector office</string>
    <string name="food_festival_description">Pana Sankranti, also known as Maha bisuba Sankranti, is the traditional new year day festival of Buddhists and Hindus in Odisha, India.</string>
    <string name="food_festival_schedule">14 April every year</string>
    <string name="shop_potato_description">Office of the Collector and District Magistrate</string>
    <string name="shop_potato_address">Jajpur,At/Po-Jajpur, Dist.-Jajpur,Pin-755001</string>
    <string name="shop_potato_phone">06728-222001</string>
    <string name="shop_potato_schedule">10:00-17:30</string>
    <string name="sight_Chandikhole_name">Chandikhole</string>
    <string name="sight_Chandikhole_description">Chandikhole is a town in Jajapur district, Odisha, India. The place has been named after Goddess Chandi worshipped by late monk Baba Bhairabananda Bramhachari who established the deity of Maa Chandi in one of the adjoining hills of Barunei full of dense forest and ferrocious animals in 1932.</string>
    <string name="sight_Chandikhole_phone">9437232530, Mr. P.K Patnaik (District Tourist officer)</string>
    <string name="sight_Duburi_name">Duburi</string>
    <string name="sight_Duburi_description">Duburi is at a distance of 38 km from Chandikhol towards Daitari mines on Express Highway. It is going to be one of the most eminent cities of Odisha in the very near future as a number of steel plants have been established here. These are Neelachal Ispat Nigam Ltd., Jindal Stainless, Mesco Steels., VISA Steel and a few others. Also TATA group is going to build a huge plant here.</string>
    <string name="sight_Ratnagiri_name">Archaeological museum at Ratnagiri</string>
    <string name="jajpur">Jajpur, Odisha ଯାଜପୁର Jajpur</string>
    <string name="Demographics">Economy</string>
    <string name="Politics">Politics</string>
    <string name="jajpurdesc">Jajpur is a district of Odisha, India, and an historic place of pilgrimage. As Jajpur was once the capital of the Kalinga kingdom, it is now an area of archeological wealth, including the famous Saktipitha of the Goddess Biraja, as well as the shrines of the Goddess Biraja (Durga), Yajnya Varaha (incarnation of Lord Vishnu as the white boar), Sapta Matruka, and a host of other religious figures, all located along the bank of the River Baitarani. Ashokajhar, Chandikhol, Chhatia, Gokarnika, Kuansa Mangala, Mahavinayak, Patharajpur, Ratnagiri, Udayagiri, Satyapira, Singhapur, Vyas Sarovar, and Varuneswar Pitha are some of the destinations that attract tourists to the district, and the region\'s various natural resources support mines and industries.</string>
    <string name="Geographi">Geography</string>
    <string name="jajpurdesc1">The district is 2,888 square kilometres (1,115 sq mi) in area, of which 202 square kilometres (78 sq mi) is forested. The population is 1, 622,868 and the literacy rate is 72.19%. The district headquarters is at Jajpur. The district is home to some 1,781 villages and two major towns. Annual rainfall is 1,771.8 millimetres (69.76 in).</string>
    <string name="jajpurdesc3">Kalinga Nagar is situated in Danagadi Block where currently six big steel plants are operating like Jindal Stainless Limited, Neelanchal Ispat Nigam Limited, VISA Steel, Maithan Ispat Ltd., Mesco Steel, TATA STEEL and other seven are on their way to start production like Brahmani River Pellets Ltd or BRPL, Maharashtra Seamless Ltd etc.</string>
    <string name="Important">Important Places</string>
    <string name="jajpurdesc8">Biraja Khetra: This is the ancient name of its district headquarters Jajpur town. Jajpur town also known as Biraja Kshetra, the place sacred to Goddess Biraja, the symbol of Sakti (Power). It is a small city surrounded by the river Baitarani in semicircle and a high level canal at the other end. Jajpur town is believed to be the capital of Yayati Keshari the then king of Kalinga Empire during 11th–12th. century AD.</string>
    <string name="jajpurdesc9">Chhatia Batta: Chhatia is famous for Lord Jagannath Temple. It is 25 km from Cuttack. It is believed as the second Shreekhetra of Odisha according to the facts described in Malika. The accommodation facility can be availed at Chandikhol and Cuttack by hiring Hotels and Lodges. For financial purpose, the nearest bank located to this tourist place is S.B.I Chatia. The common languages spoken in the area are Oriya, Hindi and English. PHC, Chatia is nearer to the spot for accessing medical facilities. People wear light cotton in summer and woolen in winter.</string>
    <string name="jajpurdesc10">Dasaswamedha Ghat is situated on the bank of river Baitarani. This famous holy spot was built during the rule of Jajati Kesari. Baruni Snana is a significant occasion when many pilgrims visit the place for holy bath, which is celebrated during the month of February and March. It is believed that you are blessed if you take bath at Dasaswamedha Ghat in any holy day of Hindu calendar. The accommodation facility can be availed at Jajpur Road and Jajpur Town by hiring Hotels and Lodges.</string>
    <string name="jajpurdesc11"><![CDATA[janpada Shri Dadhibaman Jiew Temple: Janpada is situated at distance of 15 km from district headquarters and 25 km from Chandikhole. According to Mukti Mandap Mahasabha & various historical manuscripts Shri Dadhibaman jiew at Janpada is more-than-900-year-old deity and worshipped by Pujaris ( Dash)communities originally from UP. Ratha Yatra is the main function of Shri Dadhibana Jiew apart from so many festivals, Hera Panchami at Mausima Temple situated at Janpada eastern parts of the village and Sunabesa on Chariot at main temple creates a different spiritual atmosphere. Adhikari Madan Dash is the chief priest and as per family tradition Mahendra Nayak is the Chief Sevayat ( Servant) of Shri Dadhibaman Jiew.]]></string>
    <string name="jajpurdesc12">Golkunda Maa Bata Mangala Temple: At a distance of 16  from District Headquarter near to Janpada. According to local beliefs, if any one has serious health issues then he can be cured by the blessing of Maa Mangala. Every year from Pana/Bisuba Sankranti 9 days Mahayangya taking all devotees in blessings. It is situated bank of River Brahmani and beautiful Golkunda Village. Any one should go to take a visit at this beautiful place. Near by town is Brahmabarada.</string>
    <string name="jajpurdesc13">Budha Gosain Temple.... It is a historic and cultural place of Arangabad village of Bari Block. The distance of the temple is 26 km from Jajpur towards the Saheed Smruti Pitha of Kalamatia. There is Lord Jagannath, Balbhadra and Suvadra worship by the Pujaris. All the festivals of Lord Jagannath at Puri observe here except Ratha Yatra.</string>
    <string name="jajpurdesc14">Lalitgiri, Ratnagiri and Udayagiri: These three Buddhist monasteries (viharas) are between 60 km and 65 km northeast of Cuttack. They are said to be the ancient seat of Puspagiri, the Buddhist university of the 7th century A.D. Recently a statue of emperor Ashoka was excavated at Langudi hill. A new Buddha vihara at Hatikhal village was discovered in 2012.</string>
    <string name="jajpurdesc15">Baruneswar Temple: Situated in the village of Arei. The Baruneswar Temple stands beside a small stream named Kushabhadra branched off from the river Baitarani on the South Eastern Limit of the Triangular Biraja Kshetra. The Siva Lingam is submerged under water. It is a famous spot for devotees and tourists during Rain and winter season. Makar Mela/Baruneswar Mela is one of the biggest fair in Odisha. Every year it begins on 14 January (Makarasankranti i.e. 1st day of Magha). This is the right time for a visitor to visit this holy place. This place is 15 km from Jajpur Town.</string>
    <string name="jajpurdesc16">Singhpur: A very ancient historical site situated on the bank of river Kharashrota in Binjhapur Tehsil of Jajpur district of Odisha. It was capital of Kalinga Kingdom during the period of King Sinha Bahu, a contemporary of Lord Buddha and king Bimbisara of Rajgriha.</string>
    <string name="jajpurdesc17">Vyasa sarovar mela (now called Vyasa Mahotsava) is most famous festival in Jajpur Road. Kalinga Nagar Mahotsav is being held at Jakhapura on June 30 every year.</string>
    <string name="jajpurdesc4">The following is the 7 Vidhan sabha constituencies of Jajpur district and the elected members of that area</string>
    <string name="Demographic">Demographics</string>
    <string name="jajpurdesc98">According to the 2011 census Jajpur district has a population of 1,826,275, roughly equal to the nation of Kosovo or the US state of Nebraska.This gives it a ranking of 261st in India (out of a total of 640).The district has a population density of 630 inhabitants per square kilometre (1,600/sq mi) .Its population growth rate over the decade 2001–2011 was 12.43%.Jajpur has a sex ratio of 972 females for every 1000 males,and a literacy rate of 80.44%.</string>
    <string name="aboutapp">This application is only made for helping to people of Jajpur and also for visitors.</string>
    <string name="declaapp">The contents of this app are purely based on the data available on various genuine websites which are approximately correct. If any wrong information is found in this Application then it is subject to correction.</string>
    <string name="declaapp2">Users are welcome to give their feedback or         to add more correct information on the below mail address.</string>
    <string name="mail">jajpurguide@gmail.com</string>
    <string name="website1">https://en.wikipedia.org/wiki/Jajpur_district</string>
</resources>